# beebop_py

./: .dockerignore  .gitignore  GPSC8_reference.fasta  README.md  glossary.md  pyproject.toml  qfile.txt  sub_lineage.sh
.github/workflows/: build_and_push.yml  debug.yml  debugging.yml  docker.yml  lint_and_format.yml  pycodestyle.yml  pycodestyle_workflow.yml  pylint.yml  pytest.yml  python-app.yml
beebop/: addition.py  app.py  assignClusters.py  assignLineages.py  config.py  dataClasses.py  filestore.py  main.py  poppunkWrapper.py  schemas.py  utils.py  versions.py  visualise.py
beebop/api/: __init__.py  api_utils.py  config_routes.py  error_handlers.py  helpers.py  project_routes.py  routes.py
beebop/config/: __init__.py  config.py  filepaths.py  filestore.py  redis.py  schemas.py
beebop/db/: __init__.py  redis.py
beebop/models/: __init__.py  dataclasses.py  enums.py  types.py
beebop/resources/: GPS_v6_external_clusters.csv  GPS_v6_external_clusters_ORIGINAL.csv  GPS_v8_external_clusters.csv  GPS_v9_external_clusters.csv  GPS_v9_location_metadata.json  GPS_v9_metadata_location.json  args.json  csv_dot.microreact  csv_dot_nwk.microreact
beebop/services/: cluster_service.py  file_service.py  global_service.py  index_service.py  job_service.py  result_service.py
beebop/services/poppunk/: poppunkWrapper.py  run.py
beebop/services/poppunk/assign/: assign.py  helpers.py
beebop/services/poppunk/visualise/: helpers.py  visualise.py
beebop/services/run_PoPUNK/: __init__.py  poppunkWrapper.py  run.py
beebop/services/run_PoPUNK/assign/: assign_utils.py  run.py
beebop/services/run_PoPUNK/visualise/: run.py  visualise_utils.py
beebop/services/run_PopPUNK/: __init__.py  poppunkWrapper.py  run.py
beebop/services/run_PopPUNK/assign/: __init__.py  assign_utils.py  run.py
beebop/services/run_PopPUNK/sublineage/: __init__.py  run.py  sublineage_utils.py
beebop/services/run_PopPUNK/visualise/: __init__.py  run.py  visualise_utils.py
beebop/utils/: __init__.py  config.py  redis.py
buildkite/: pipeline.yaml  pipeline.yml
diagrams/: Beebop-PopPUNK-run.drawio
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  build  common  push  use  visualise.py
migrations/: reduce_external_clusters.py
scripts/: clean_external_clusters_csv.py  download_databases  download_db  gt-to-csv-gz.py  metadata_csv-to-location_json.py  run_app  run_test_dependencies  run_tests  start_redis  stop_redis
spec/: amr.schema.json  cluster.schema.json  db_kmers.schema.json  location_metadata.schema.json  project.schema.json  runPoppunk.schema.json  sketch.schema.json  sketches.schema.json  species_config.schema.json  status.schema.json  version.schema.json
tests/: README.md  conftest.py  generate_visualisation_input.py  hdf5_to_json.py  setup.py  test_beebop.py  test_integration.py  test_unit.py  test_utils.py
tests/api/: test_api_utils.py
tests/config/: test_config.py  test_filepaths.py  test_filestore.py  test_redis.py
tests/files/: rfile.txt
tests/files/poppunk_output/: Instructions.md
tests/files/poppunk_output/test_lineage_csv/: lineages_output.csv
tests/files/poppunk_output/unit_test_get_clusters_internal/: cluster_results.pickle
tests/files/poppunk_output/unit_test_get_failed_samples_internal/: cluster_results.pickle  (+8 more)
tests/files/sketches/: strep_pyogenes_sample.json  strep_sample.json
tests/files/sketchlib_input/: rfile.txt
tests/services/: test_cluster_service.py  test_file_service.py  test_job_service.py  test_result_service.py
tests/services/run_PopPUNK/: test_poppunkWrapper.py  test_run.py
(+41 files in other folders)
