[tool.poetry]
name = "beebop"
version = "0.1.0"
description = "Python API for beebop"
authors = ["muppi1993 <clara.gronemeyer20@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0"
jsonschema = "^4.4"
pycodestyle = "^2.8.0"
waitress = "^2.0.0"
h5py = "^3.6.0"
numpy = "^1.22.3"
flask-expects-json = "^1.7.0"
redis = "^4.3.1"
pytest-qt = "^4.0.2"
pytest = "^7.1.2"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.4.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*","*test_*"]

[tool.coverage.report]
fail_under = 90