[tool.poetry]
name = "beebop"
version = "0.1.0"
description = "Python API for beebop"
authors = ["muppi1993 <clara.gronemeyer20@imperial.ac.uk>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.0"
jsonschema = "^4.4"
pycodestyle = "^2.8.0"
waitress = "^2.0.0"
h5py = "^3.6.0"
numpy = "^1.22.3"
flask-expects-json = "^1.7.0"
redis = "^4.3.1"
pytest-qt = "^4.0.2"
pytest = "^7.1.2"
rq = "^1.10.1"
six = "^1.16.0"
pytest-mock = "^3.8.2"
pytest-unordered = "^0.5.1"
PySide6 = "^6.3.1"
pytest-xvfb = "^2.0.0"
docsig = "^0.23.0"
Pygments = "^2.13.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^6.4.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*","*test_*"]

[tool.coverage.report]
fail_under = 90
omit = [
    "shibokensupport/*",
    "signature_bootstrap.py",
]
